--- a/pomodoros/2014-03-15.org
+++ b/pomodoros/2014-03-15.org
@@ -1,7 +1,8 @@
 * 2014/03/15
 ** TODO #454 Refactor CustomSqlValidationHandler into its own chain: 6 -> X
-** DONE Setup RT for QueryJ again: 1 -> X 
+** DONE Setup RT for QueryJ again: 1 -> X
 
 * Notes:
 ** TODO toString() in PropertyElement does not include the type
 ** TODO Research org-mode's item table
+** TODO Review the "watch" command in RT
