--- a/pomodoros/2014-03-15.org
+++ b/pomodoros/2014-03-15.org
@@ -5,4 +5,5 @@
 * Notes:
 ** TODO toString() in PropertyElement does not include the type
 ** TODO Research org-mode's item table
-** TODO Review the "watch" command in RT
+** DONE Review the "watch" command in RT
+
