--- a/pomodoros/2014-03-15.org
+++ b/pomodoros/2014-03-15.org
@@ -6,4 +6,4 @@
 ** TODO toString() in PropertyElement does not include the type
 ** TODO Research org-mode's item table
 ** DONE Review the "watch" command in RT
-** TODO rt-client fails to add new files
+** TODO BUG: rt-client fails to add new files
