--- a/queryj-core/src/main/resources/queryj-exceptions_es.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions_es.properties
@@ -110,5 +110,5 @@ ResultSetMetadata.operation.failed=Error al validar la consulta {0} (result {1})
 MetadataManager.not.available=Error interno: La instancia de MetadataManager no está disponible
 custom.sql.with.no.properties=La consulta SQL {0} no tiene definidas Propiedades (columnas) ni explícita ni implícitamente
 no.table.matching.custom.sql=La consulta SQL {0} no tiene ninguna tabla (conocida) asociada (puede ser que su atributo DAO ({1}) sea incorrecto?)
-Properties.not.available.for.validation=Error interno: Las propiedades/columnas no están disponibles al validar {0}
+Properties.not.available.for.validation=Error interno: Las propiedadesno están disponibles al validar {0}
 columns.not.available.for.validation=Error interno: Columns not available when validating {0}
