--- a/queryj-core/src/main/resources/queryj-exceptions_es.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions_es.properties
@@ -117,4 +117,4 @@ cannot.analyze.ResultSet.for.validation=Ha ocurrido un problema al operar con el
 ResultSetGetters.validation.not.available=Error interno: La comprobación sobre los métodos get del ResultSet no se ha realizado aún para la consulta {0}
 cannot.validate.empty.query=La consulta {0} está sin definir, pero marcada para validación. Defínala o bien deshabilite su atributo "validate"
 invalid.column.name.in.custom.query=Nombre de columna inválida {0} en la consulta {1}
-invalid.column.name.in.custom.result=Nombre de columna inválida Invalid column name {0} as declared in {2}, for SQL {1}
+invalid.column.name.in.custom.result=Nombre de columna inválida {0} as declared in {2}, for SQL {1}
