--- a/pomodoros/2014-03-18.org
+++ b/pomodoros/2014-03-18.org
@@ -1,3 +1,3 @@
 * 2014/03/18
 ** DONE #455 Stop processing non-select queries just before dealing with ResultSet.getMetaData(): 1 -> 1
-** TODO #456 Distinguish between invalid column name/type: 1 -> 1
+** DONE #456 Distinguish between invalid column name/type: 1 -> 1
