--- a/pomodoros/2014-03-22.org
+++ b/pomodoros/2014-03-22.org
@@ -1,6 +1,6 @@
 * 2014/03/22
 ** TODO #448 Cucumber template: 3 -> 3
-** TODO Review generated DAO: 1 ->
+** TODO Review generated DAO: 1 -> 1
 ** TODO Add BaseDAO: 1 ->
 ** TODO Fix BaseDAO: 1 ->
 
