--- a/pomodoros/2014-03-23.org
+++ b/pomodoros/2014-03-23.org
@@ -1,6 +1,6 @@
 * 2014/03/23
 ** DONE Update dependencies to latest versions: 1 -> 1
-** TODO Upgrade to Java 8 : 1 ->
+** DONE Upgrade to Java 8 : 1 -> 1
 ** TODO #448 Cucumber template: 3 ->
 ** TODO Review generated DAO: 1 ->
 ** TODO Add BaseDAO: 1 ->
