--- a/pomodoros/2014-03-24.org
+++ b/pomodoros/2014-03-24.org
@@ -1,4 +1,5 @@
 * 2014/03/24
+** TODO Upgrade to Java 8 : 1 ->
 ** TODO #448 Cucumber template: 1 -> 
 ** TODO Review generated DAO: 1 ->
 ** TODO Add BaseDAO: 1 ->
