--- a/pomodoros/2014-03-24.org
+++ b/pomodoros/2014-03-24.org
@@ -1,6 +1,6 @@
 * 2014/03/24
 ** DONE Upgrade to Java 8 : 3 -> 3
-** TODO #448 Cucumber template: 1 -> 
+** DONE #448 Cucumber template: 1 -> 1
 ** TODO Review generated DAO: 1 ->
 ** TODO Add BaseDAO: 1 ->
 ** TODO Fix BaseDAO: 1 ->
