--- a/pomodoros/2014-03-25.org
+++ b/pomodoros/2014-03-25.org
@@ -1,5 +1,5 @@
 * 2014/03/25
-** Write ticket for fixing cucumber implementation: 1 -> 1
+** DONE Write ticket for fixing cucumber implementation: 1 -> 1
 ** TODO Review generated DAO: 1 ->
 ** TODO Add BaseDAO: 1 ->
 ** TODO Fix BaseDAO: 1 ->
