--- a/pomodoros/2014-03-27.org
+++ b/pomodoros/2014-03-27.org
@@ -1,6 +1,6 @@
 * 2014/03/27
 ** DONE Implement StaticValuesHandler: 1 -> 1
-** TODO Review generated DAO: 1 -> 1
+** DONE Review generated DAO: 1 -> 1
 ** TODO Add BaseDAO: 1 ->
 ** TODO Fix BaseDAO: 1 ->
 
