--- a/queryj-core/src/main/resources/queryj-exceptions_es.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions_es.properties
@@ -118,4 +118,4 @@ ResultSetGetters.validation.not.available=Error interno: La comprobación sobre 
 cannot.validate.empty.query=La consulta {0} está sin definir, pero marcada para validación. Defínala o bien deshabilite su atributo "validate"
 invalid.column.name.in.custom.query=Nombre de columna inválida {0} en la consulta {1}
 invalid.column.name.in.custom.result=Nombre de columna inválida {0}, declarada en {2}, para la consulta SQL {1}
-CustomSqlProvider.not.available=Error interno: No está disponible la instancia de CustomSqlProvider instance is not available
+CustomSqlProvider.not.available=Error interno: No está disponible la instancia de CustomSqlProvider
