--- a/queryj-core/src/main/resources/queryj-exceptions_es.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions_es.properties
@@ -119,3 +119,4 @@ cannot.validate.empty.query=La consulta {0} está sin definir, pero marcada para
 invalid.column.name.in.custom.query=Nombre de columna inválida {0} en la consulta {1}
 invalid.column.name.in.custom.result=Nombre de columna inválida {0}, declarada en {2}, para la consulta SQL {1}
 CustomSqlProvider.not.available=Error interno: No está disponible la instancia de CustomSqlProvider
+DecoratorFactory.not.available=Internal Error: The required DecoratorFactory implementation is not available
