--- a/queryj-core/src/main/resources/queryj-exceptions_es.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions_es.properties
@@ -121,4 +121,4 @@ invalid.column.name.in.custom.result=Nombre de columna inválida {0}, declarada 
 CustomSqlProvider.not.available=Error interno: No está disponible la instancia de CustomSqlProvider
 DecoratorFactory.not.available=Error interno: No está disponible la implementación de DecoratorFactory
 PackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete destino
-BasePackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete destino
+BasePackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete de destino
