--- a/queryj-core/src/main/resources/queryj-exceptions_es.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions_es.properties
@@ -120,5 +120,5 @@ invalid.column.name.in.custom.query=Nombre de columna inválida {0} en la consul
 invalid.column.name.in.custom.result=Nombre de columna inválida {0}, declarada en {2}, para la consulta SQL {1}
 CustomSqlProvider.not.available=Error interno: No está disponible la instancia de CustomSqlProvider
 DecoratorFactory.not.available=Error interno: No está disponible la implementación de DecoratorFactory
-PackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete destino
-BasePackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete de destino
+PackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete de destino
+BasePackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete base de destino
