--- a/queryj-core/src/main/resources/queryj-exceptions_es.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions_es.properties
@@ -122,3 +122,4 @@ CustomSqlProvider.not.available=Error interno: No está disponible la instancia 
 DecoratorFactory.not.available=Error interno: No está disponible la implementación de DecoratorFactory
 PackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete de destino
 BasePackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete base de destino
+RepositoryName.not.available=Error interno: No está disponible la información sobre el nombre del paquete de destino
