--- a/queryj-core/src/main/resources/queryj-exceptions_es.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions_es.properties
@@ -123,5 +123,5 @@ DecoratorFactory.not.available=Error interno: No está disponible la implementac
 PackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete de destino
 BasePackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete base de destino
 RepositoryName.not.available=Error interno: No está disponible la información sobre el nombre del repositorio
-JndiLocation.not.available=Error interno: No está disponible la información sobre el nombre del repositorio
+JndiLocation.not.available=Error interno: No está disponible la información sobre la ruta JNDI del DataSource
 FileName.not.available=Internal Error: The required file name information is not available
