--- a/queryj-core/src/main/resources/queryj-exceptions_es.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions_es.properties
@@ -124,4 +124,4 @@ PackageName.not.available=Error interno: No está disponible la información sob
 BasePackageName.not.available=Error interno: No está disponible la información sobre el nombre del paquete base de destino
 RepositoryName.not.available=Error interno: No está disponible la información sobre el nombre del repositorio
 JndiLocation.not.available=Error interno: No está disponible la información sobre la ruta JNDI del DataSource
-FileName.not.available=Internal Error: The required file name information is not available
+FileName.not.available=Error interno: No está disponible la información sobre la ruta JNDI del DataSource
