--- a/queryj-core/src/main/resources/queryj-exceptions_es.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions_es.properties
@@ -125,3 +125,5 @@ BasePackageName.not.available=Error interno: No está disponible la información
 RepositoryName.not.available=Error interno: No está disponible la información sobre el nombre del repositorio
 JndiLocation.not.available=Error interno: No está disponible la información sobre la ruta JNDI del DataSource
 FileName.not.available=Error interno: No está disponible la información sobre la ruta del fichero a generar
+TableName.not.available=Internal Error: The required table name information is not available
+StaticValues.not.available=Internal Error: The required list of static values is not available
