--- a/queryj-core/src/main/resources/queryj-exceptions_es.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions_es.properties
@@ -126,4 +126,4 @@ RepositoryName.not.available=Error interno: No está disponible la información 
 JndiLocation.not.available=Error interno: No está disponible la información sobre la ruta JNDI del DataSource
 FileName.not.available=Error interno: No está disponible la información sobre la ruta del fichero a generar
 TableName.not.available=Error interno: No está disponible la información sobre el nombre de la tabla
-StaticValues.not.available=Error interno: No está disponible la información sobre el nombre de la tabla
+StaticValues.not.available=Error interno: No está disponible la información sobre los datos estáticos de la tabla
