--- a/pomodoros/2014-03-29.org
+++ b/pomodoros/2014-03-29.org
@@ -1,6 +1,6 @@
 * 2014/03/29
 ** Refactor TemplateContext #459: 
-*** TODO Refactor TemplateFactory template: 1 ->
+*** DONE Refactor TemplateFactory template: 2 -> 2
 *** TODO Refactor BuildHandler template: 1 ->
 ** Pending:
 *** Move TableTestHelper out of QueryJ Templates
